--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ repository = "https://github.com/dnettoRaw/hashTokenRust.git"
 
 
 [dependencies]
+hex = "0.4"
+sha2 = "0.10"
+hmac = "0.12"
 rand = "0.8"
-base64 = "0.22.1"
+base64 = "0.21"
