--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
-/target
+# Dependências
+node_modules/
+
+# Compilação
+dist/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# # Testes
+# coverage/
+# *.test.ts
+# *.test.js
+# *.spec.ts
+# *.spec.js
+# .jest/
+
+# Sistema Operacional
+.DS_Store
+Thumbs.db
+
+# IDEs e Editores
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Arquivos de Build
+*.tsbuildinfo
+
+# Outros
+.env
+*.tgz
+.npmrc
+.eslintcache
+
+
+command.md
